--- a/public/assets/css/fullcalendar.css
+++ b/public/assets/css/fullcalendar.css
@@ -3,7 +3,7 @@
     --fc-page-bg-color: #fff;
     --fc-neutral-bg-color: rgba(208, 208, 208, 0.3);
     --fc-neutral-text-color: #808080;
-    --fc-border-color: #ddd;
+    --fc-border-color: #6c7293;
 
     --fc-button-text-color: #fff;
     --fc-button-bg-color: #2C3E50;
@@ -36,4 +36,8 @@
   .fc .fc-button-group .fc-button {
     background-color: #0090e7;
     margin: 0;
+}
+
+.fc .fc-col-header-cell-cushion {
+    color: #ffff;
 }
