--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -40,3 +40,7 @@
 .fc-v-event{
     @apply subpixel-antialiased hover:brightness-105 hover:scale-105 ease-in-out duration-100 transition-all
 }
+
+.fi-ta-header-cell-label{
+    @apply text-[#6ea8fe] dark:text-[#6ea8fe] !important;
+}
