--- a/public/assets/css/rome.css
+++ b/public/assets/css/rome.css
@@ -64,7 +64,9 @@
   width: 55px!important;
   height: 55px!important;
   color: #ccc;
+  box-sizing: border-box;
 }
+
 .rd-day-selected,
 .rd-time-selected,
 .rd-time-option:hover {
@@ -74,9 +76,9 @@
   /* new */
 }
 
-.rd-day-body:hover{
-    border: 2px solid #0070b3;
-}
+.rd-day-body:hover {
+    box-shadow: inset 0 0 0 2px #0070b3;
+  }
 
 
 .rd-day-prev-month,
@@ -86,12 +88,11 @@
 .rd-day-disabled {
   cursor: default;
   color: #272933;
-  border-radius: 10px;
 }
 
 .rd-day-disabled:hover{
 	cursor: not-allowed;
-	border: none;
+	box-shadow: none;
 }
 
 .rd-time {
