--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -64,3 +64,63 @@
 .fi-ta-actions{
     @apply justify-center !important;
 }
+
+.dark\:\[\&\:not\(\:has\(\.fi-ac-action\:focus\)\)\]\:focus-within\:ring-primary-500:focus-within:not(:has(.fi-ac-action:focus)):is(.dark *) {
+    @apply ring-[#46b046]/50 ring-1 transition-transform !important;
+}
+
+
+.fi-input-wrp{
+    @apply rounded-sm dark:bg-[#2a3038] !important;
+}
+
+.fi-input:disabled{
+    @apply bg-zinc-700 !important;
+}
+
+.fi-modal-header{
+    @apply bg-white dark:bg-[#20232e] !important;
+}
+
+.fi-modal-window{
+    @apply bg-white dark:bg-[#191c24] !important;
+}
+
+.fi-modal-footer{
+    @apply bg-white dark:bg-[#20232e] !important;
+}
+
+
+
+.fi-btn{
+    @apply rounded-e rounded-s font-medium !important;
+}
+
+.choices__list--multiple .choices__item {
+    --tw-bg-opacity: 1;
+    --tw-text-opacity: 1;
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    --tw-ring-inset: inset;
+    --tw-ring-color: rgba(var(--primary-600), 0.1);
+    align-items: center;
+    background-color: rgba(var(--primary-50), var(--tw-bg-opacity));
+    border-radius: .375rem;
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+    color: rgba(var(--primary-600), var(--tw-text-opacity));
+    display: inline-flex
+;
+    font-size: .75rem;
+    font-weight: 500;
+    gap: .25rem;
+    line-height: 1rem;
+    padding: .25rem .5rem;
+    word-break: break-all;
+}
+
+.choices__list--multiple .choices__item:is(.dark *) {
+    --tw-text-opacity: 1;
+    --tw-ring-color: rgba(var(--primary-400), 0.3);
+    background-color: rgba(var(--primary-400), .1);
+    color: rgba(var(--primary-400), var(--tw-text-opacity));
+}
