--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -37,13 +37,44 @@
     @apply bg-primary-800 capitalize
 }
 
+.fc .fc-toolbar-title {
+    @apply capitalize;
+}
+
+.fc .fc-list-event:hover td {
+    @apply bg-black/30;
+}
+
+
+.fc .fc-col-header-cell-cushion {
+    @apply font-medium;
+}
+
 .fc-v-event{
-    @apply subpixel-antialiased hover:brightness-105 ease-in-out duration-100 transition-all
+    @apply subpixel-antialiased hover:brightness-125 ease-in-out duration-100 transition-all cursor-pointer;
+}
+
+.fc-daygrid-dot-event{
+@apply cursor-pointer;
+}
+
+.fc-list-event{
+    @apply cursor-pointer;
+}
+
+.fc-list-day-text{
+    @apply text-gray-100 dark:text-gray-100 capitalize font-medium;
+}
+
+.fc-list-day-side-text{
+    @apply text-white dark:text-white font-normal;
 }
 
 .fi-ta-header-cell-label{
     @apply text-[#6ea8fe] dark:text-[#6ea8fe] !important;
 }
+
+
 
 @media (min-width: 1278px) {
     .fi-pagination:not(.fi-simple) > .fi-pagination-next-btn {
@@ -83,13 +114,12 @@
 }
 
 .fi-modal-window{
-    @apply bg-white dark:bg-[#191c24] !important;
+    @apply bg-white dark:bg-[#191c24] rounded-md !important;
 }
 
 .fi-modal-footer{
-    @apply bg-white dark:bg-[#20232e] !important;
+    @apply bg-white dark:bg-[#20232e] pt-3 !important;
 }
-
 
 
 .fi-btn{
@@ -123,4 +153,13 @@
     --tw-ring-color: rgba(var(--primary-400), 0.3);
     background-color: rgba(var(--primary-400), .1);
     color: rgba(var(--primary-400), var(--tw-text-opacity));
+}
+
+
+.sidebar .sidebar-brand-wrapper .sidebar-brand img {
+    width: 100%;
+    max-width: 100%;
+    /* height: 28px; */
+    margin: auto;
+    vertical-align: middle;
 }
